--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,34 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+
+    //mockito
+    testImplementation 'org.mockito:mockito-inline:3.4.0'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+
     //koin di
     implementation "org.koin:koin-android:2.1.5"
     implementation "org.koin:koin-android-scope:2.1.5"
     implementation "org.koin:koin-android-viewmodel:2.1.5"
     implementation "org.koin:koin-android-ext:2.1.5"
     testImplementation "org.koin:koin-test:2.1.5"
+
+
+    //coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
+
+
+    //liveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+
+    //viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+
+    //lifecycle extension
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
 
 
 }
